Final project requirements

--- a/codeconduct.html
+++ b/codeconduct.html
@@ -23,7 +23,7 @@
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
 
-    <p class="username">@reznabid</p>
+    <p class="username">@rez_nabid</p>
     <p class="socialdes">Follow us on our social media</p>
 
     <!-- Start of butto html.-->
@@ -44,106 +44,88 @@
         </nav>
     </header>
 
-    <!--     
-    <header>
-        <div class="buttondiv"> 
-            <nav class="navigation">
-                <ul>
-                    <button class="button--secondary">
-                        <li><a href="index.html">Home</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="schedule.html">Schedules</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="direction.html">Direction</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="codeconduct.html">Code of Conduct</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="contact.html">Contact</a></li>
-                    </button>
-                </ul>
-            </nav>
-        </div>
-    </header> -->
 
     <!-- Video of code conduct page starts here.-->
+    <div class="sararesponsive">
+        <picture>
+            <p class="para1">Play your favorite game here</p>
+            <center><img class="soccer" src="soccer.jpg" alt="1st_pic">
+            </center>
 
-    <div class="container">
-        <div class="image">
-            <div class="image_overlay">
-                <h1>Code Of Conduct</h1>
+        </picture>
+        <div class="container">
+            <div class="image">
+                <div class="image_overlay">
+                    <h1>Code Of Conduct</h1>
+                </div>
             </div>
         </div>
+
+        <div class="allconduct"></div>
+        <p class="policyheading">Sports Arena has adopted a code of Conduct Policy</p>
+        <div class="firstPara">
+            <p class="Paragraph">For any activity or event at Sports Arena, it is everyone's responsibility
+                to maintain the highest standards of conduct of themselves. Failure to so
+                undermines the general enjoyment of youth/adult sports, the referee's
+                authority and the integrity of the game results in an unnecessary hostile
+                environment for players, referees, coaches, and parents/spectators.
+            </p>
+            <br>
+            <p class="Paragraph">
+                Abusive and obscene language, violent play/conduct, fighting and other behavior
+                deemed detrimental to the game will not be tolerated. This policy applies before,
+                during and after the event - inside or outside of the facility.
+            </p>
+        </div>
+        <p class="policyheading">Coaches/Assitant coaches</p>
+        <div class="secondPara">
+            <p class="Paragraph">Coaches are expected to be supportive and acknowledge the effort,
+                good play and sportsmanship on the part of ALL players from either team in a game,
+                they have respect for their opponent, referees and spectators at all times. Conversely,
+                opponents, referees and spectators are to show respect and good sportsmanship to coaches.
+            </p>
+            <br>
+            <p class="Paragraph">Note: It is recommended that coaches or other team members do not in any
+                conversation with the referee(s) once the game has concluded. All comments should be brought
+                to the attention of the manager at the service desk.
+            </p>
+        </div>
+        <p class="policyheading">Players</p>
+        <div class="thirdPara">
+            <p class="Paragraph">Each player is expected to exhibit good sportsmanship at all times. Players
+                who engage in misconduct may be ejected or suspended from events. In severe cases of unsporting
+                behavior and violent conduct, players will receive long term disciplinary action, up to and
+                including suspension from participation in any future event at Sports Arena.
+            </p>
+        </div>
+        <p class="policyheading">Penalties</p>
+        <div class="fourthPara">
+            <p class="Paragraph">If in the opinion of the League, an individual has conducted themselves in an
+                excessively
+                physical manner or unsportsmanlike way, and depending on the severity and repetitiveness of an
+                offense(s),
+                the following actions may/will be taken:</p>
+
+            <p class="Paragraph"> a. A verbal warning to the offending party</p>
+
+            <p class="Paragraph"> b. Game stopped and instruction for offending party to leave the facility</p>
+
+            <p class="Paragraph"> c. Game stopped and abandoned (resulting in a forfeit for the offending parties team)
+                if the offending party does not leave the facility</p>
+
+            <p class="Paragraph"> d. Suspension of the offending party from all future events for a duration of time
+                until
+                an appropriate resolution has been taken to the satisfaction of The Sports Arena</p>
+
+            <p class="Paragraph"> e. Suspension of the offending party from all future events indefinitely</p>
+
+            <p class="Paragraph"> If a player, parent/spectator, coach, assistant coach is suspended/banned by The
+                Sports
+                Arena he/she is not
+                allowed to participate in or have any interaction with their team until they are reinstated.</p>
+        </div>
     </div>
-
-    <div class="allconduct"></div>
-    <p class="policyheading">Sports Arena has adopted a code of Conduct Policy</p>
-    <div class="firstPara">
-        <p class="Paragraph">For any activity or event at Sports Arena, it is everyone's responsibility
-            to maintain the highest standards of conduct of themselves. Failure to so
-            undermines the general enjoyment of youth/adult sports, the referee's
-            authority and the integrity of the game results in an unnecessary hostile
-            environment for players, referees, coaches, and parents/spectators.
-        </p>
-        <br>
-        <p class="Paragraph">
-            Abusive and obscene language, violent play/conduct, fighting and other behavior
-            deemed detrimental to the game will not be tolerated. This policy applies before,
-            during and after the event - inside or outside of the facility.
-        </p>
     </div>
-    <p class="policyheading">Coaches/Assitant coaches</p>
-    <div class="secondPara">
-        <p class="Paragraph">Coaches are expected to be supportive and acknowledge the effort,
-            good play and sportsmanship on the part of ALL players from either team in a game,
-            they have respect for their opponent, referees and spectators at all times. Conversely,
-            opponents, referees and spectators are to show respect and good sportsmanship to coaches.
-        </p>
-        <br>
-        <p class="Paragraph">Note: It is recommended that coaches or other team members do not in any
-            conversation with the referee(s) once the game has concluded. All comments should be brought
-            to the attention of the manager at the service desk.
-        </p>
-    </div>
-    <p class="policyheading">Players</p>
-    <div class="thirdPara">
-        <p class="Paragraph">Each player is expected to exhibit good sportsmanship at all times. Players
-            who engage in misconduct may be ejected or suspended from events. In severe cases of unsporting
-            behavior and violent conduct, players will receive long term disciplinary action, up to and
-            including suspension from participation in any future event at Sports Arena.
-        </p>
-    </div>
-    <p class="policyheading">Penalties</p>
-    <div class="fourthPara">
-        <p class="Paragraph">If in the opinion of the League, an individual has conducted themselves in an
-            excessively
-            physical manner or unsportsmanlike way, and depending on the severity and repetitiveness of an
-            offense(s),
-            the following actions may/will be taken:</p>
-
-        <p class="Paragraph"> a. A verbal warning to the offending party</p>
-
-        <p class="Paragraph"> b. Game stopped and instruction for offending party to leave the facility</p>
-
-        <p class="Paragraph"> c. Game stopped and abandoned (resulting in a forfeit for the offending parties team)
-            if the offending party does not leave the facility</p>
-
-        <p class="Paragraph"> d. Suspension of the offending party from all future events for a duration of time
-            until
-            an appropriate resolution has been taken to the satisfaction of The Sports Arena</p>
-
-        <p class="Paragraph"> e. Suspension of the offending party from all future events indefinitely</p>
-
-        <p class="Paragraph"> If a player, parent/spectator, coach, assistant coach is suspended/banned by The
-            Sports
-            Arena he/she is not
-            allowed to participate in or have any interaction with their team until they are reinstated.</p>
-    </div>
-    </div>
-
 
     <!-- Footer starts here.-->
     <footer>
@@ -158,6 +140,9 @@
                         class="fa-brands fa-square-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/rezaul-islam-23118b255/" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
+                <a class="link" href="https://getbootstrap.com/docs/5.0/components/navbar/"
+                    target="_blank">Bootstrap</a>
+                <a class="link" href="https://www.youtube.com/" target="_blank">YouTube</a>
             </div>
         </center>
     </footer>
