--- a/events.html
+++ b/events.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="direction.css">
+    <link rel="stylesheet" href="events.css">
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="footer.css">
-    <title>Direction</title>
-    <style>
+    <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
+    <title>Schedule & Standing</title>
 
-    </style>
 </head>
 
 <body>
@@ -24,7 +22,7 @@
     <p class="username">@rez_nabid</p>
     <p class="socialdes">Follow us on our social media</p>
 
-    <!-- Start of butto html.-->
+    <!-- Start of button html.-->
 
     <header>
         <nav>
@@ -41,41 +39,75 @@
             </ul>
         </nav>
     </header>
-    <!-- 
-    <header>
-        <div class="buttondiv"> 
-            <nav class="navigation">
-                <ul>
-                    <button class="button--secondary">
-                        <li><a href="index.html">Home</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="schedule.html">Schedules</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="direction.html">Direction</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="codeconduct.html">Code of Conduct</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="contact.html">Contact</a></li>
-                    </button>
-                </ul>
-            </nav>
-        </div>
-    </header> -->
 
-    <div class="sararesponsive">
-        <picture>
-            <p class="para1">Play your favorite game here</p>
-            <center><img class="soccer" src="soccer.jpg" alt="1st_pic">
-            </center>
+    <picture>
+        <p class="para1">Play your favorite game here</p>
+        <center><img class="soccer" src="soccer.jpg" alt="1st_pic">
+        </center>
 
-        </picture>
-        <p>You go this way than take left and than take right. You will be here</p>
+    </picture>
+
+    <h1 class="title">Events in Sports Arena </h1>
+    <div class="borotable">
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Event</th>
+                <th>Location</th>
+            </tr>
+            <tr>
+                <td>May 12, 2023</td>
+                <td>Championship Basketball Game</td>
+                <td>Basketbal court</td>
+            </tr>
+            <tr>
+                <td>June 18, 2023</td>
+                <td>Concert: Taylor Swift</td>
+                <td>Outdoor Arena</td>
+            </tr>
+            <tr>
+                <td>July 4, 2023</td>
+                <td>Fireworks Display</td>
+                <td>Outdoor Arena</td>
+            </tr>
+            <tr>
+                <td>August 22, 2023</td>
+                <td>Mixed Martial Arts Fight Night</td>
+                <td>Main Arena</td>
+            </tr>
+            <tr>
+                <td>September 8, 2023</td>
+                <td>College Football Game</td>
+                <td>Main Arena</td>
+            </tr>
+            <tr>
+                <td>October 31, 2023</td>
+                <td>Haunted House</td>
+                <td>Outdoor Arena</td>
+            </tr>
+            <tr>
+                <td>November 24, 2023</td>
+                <td>Thanksgiving Day Parade</td>
+                <td>Outdoor Arena</td>
+            </tr>
+            <tr>
+                <td>December 10, 2023</td>
+                <td>Ice Skating Show</td>
+                <td>Main Arena</td>
+            </tr>
+            <tr>
+                <td>January 1, 2024</td>
+                <td>New Year's Day 5K Run</td>
+                <td>Outdoor Arena</td>
+            </tr>
+            <tr>
+                <td>February 14, 2024</td>
+                <td>Valentine's Day Dance</td>
+                <td>Main Arena</td>
+            </tr>
+        </table>
     </div>
-    <!-- Footer starts here.-->
+
     <footer>
         <center class="ForBack">
             <p class="InfoName">Sports<br>Arena</p>
@@ -95,6 +127,7 @@
             </div>
         </center>
     </footer>
+
 </body>
 
 </html>
