--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="footer.css">
     <title>Arena Sports</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/6f0e8eb73f.js" crossorigin="anonymous"></script>
 
 </head>
@@ -18,7 +19,7 @@
     <p class="name">Sports Arena</p>
     <p class="Description">You develop your skills as you beat hours and hours of practice</p>
 
-    <p class="username">@reznabid</p>
+    <p class="username">@rez_nabid</p>
     <p class="socialdes">Follow us on our social media</p>
 
     <!-- Start of butto html.-->
@@ -27,7 +28,9 @@
             <div class="name2">Sports Arena</div>
 
             <input type="checkbox" id="cl">
-            <label for="cl" class="hd"> <i class="fas fa-bars"></i></label>
+            <label for="cl" class="hd">
+                <i class="fas fa-bars"></i>
+            </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="schedule.html">Schedules</a></li>
@@ -37,130 +40,69 @@
             </ul>
         </nav>
     </header>
+    <div class="sararesponsive">
 
-    <!-- 
-    <header>
-        <div class="buttondiv"> 
-            <nav class="navigation">
-                <ul>
-                    <button class="button--secondary">
-                        <li><a href="index.html">Home</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="schedule.html">Schedules</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="direction.html">Direction</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="codeconduct.html">Code of Conduct</a></li>
-                    </button>
-                    <button class="button--secondary">
-                        <li><a href="contact.html">Contact</a></li>
-                    </button>
-                </ul>
-            </nav>
-        </div>
-    </header> -->
-    <br>
-    <p class="desPara1">Sports Arena is the place where you practice for your favorite sports.
-        Book your game time on our website. Look all the events happaning in our arena.
-        Contact us by phone or email to find out about more events
-    </p>
+        <br>
+        <p class="desPara1">Sports Arena is the place where you practice for your favorite sports. We
+            have game court for kids and adults. Parents can enojoy the game too. Book your game time
+            on our website. Look all the events happaning in our arena. Contact us by phone or email
+            to find out more about events.
+        </p>
 
-    <picture>
-        <!--<source media="(min-width: 480px)" srcset="soccer.jpg 800w, suto_image.jpg 600w" sizes="60vw">
-        <img src="arosutoImage.jpg" alt="arosutoImage"> -->
-        <center><img class="soccer" src="soccer.jpg" alt="1st_pic">
-        </center>
-    </picture>
-    <p class="para1">Play your favorite game here</p>
+        <picture>
+            <p class="para1">Play your favorite game here</p>
+            <center><img class="soccer" src="soccer.jpg" alt="1st_pic">
+            </center>
 
-    <!--Buttons for different types of games.-->
+        </picture>
 
 
-    <div class="row">
-        <div class="column3">
-            <ul>
-                <li>
-                    <img class="image" src="soccer_image.jpg" alt="">
-                    <a class="btn" href="soccer.html">Soccer</a>
-                </li>
-            </ul>
+        <!--Buttons for different types of games.-->
+
+        <div class="row1">
+            <div class="column1">
+                <div class="card" style="width: 20rem;">
+                    <img src="soccer_image.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Soccer</h5>
+                        <p class="card-text">Find more about soccer.</p>
+                        <a href="soccer.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="column1">
+                <div class="card" style="width: 20rem;">
+                    <img src="rsz_football_image.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Football</h5>
+                        <p class="card-text">Find more about football.</p>
+                        <a href="football.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="column1">
+                <div class="card" style="width: 20rem;">
+                    <img src="rsz_badminton_image.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Badminton</h5>
+                        <p class="card-text">Find more about Badminton.</p>
+                        <a href="badminton.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="column1">
+                <div class="card" style="width: 20rem;">
+                    <img src="rsz_hockey_image.jpg" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Hockey</h5>
+                        <p class="card-text">Find more about hockey.</p>
+                        <a href="hockey.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="column3">
-            <ul>
-                <li>
-                    <img class="image" src="football_image.jpg" alt="">
-                    <a class="btn" href="#">Football</a>
-                </li>
-            </ul>
-        </div>
-        <div class="column3">
-            <ul>
-                <li>
-                    <img class="image" src="badminton.jpeg" alt="">
-                    <a class="btn" href="#">Badminton</a>
-                </li>
-            </ul>
-        </div>
-        <div class="column3">
-            <ul>
-                <li>
-                    <img class="image" src="hockey.jpeg" alt="">
-                    <a class="btn" href="#">Hockey</a>
-                </li>
-            </ul>
-        </div>
+
     </div>
-
-
-    <!--     
-    <div class="row">
-        <div class="column3">
-            <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
-            <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
-        </div>
-        <div class="column3">
-            <img class="imagebutton" src="football.jpeg" alt="">
-            <h><button class="allbuttons">Football</button></h>
-        </div>
-        <div class="column3">
-            <img class="imagebutton" src="badminton.jpeg" alt="">
-            <h><button class="allbuttons">Badminton</button></h>
-        </div>
-        <div class="column3">
-            <img class="imagebutton" src="hockey.jpeg" alt="">
-            <h><button class="allbuttons">Hockey</button></h>
-        </div>
-    </div> -->
-
-
-    <!--
-    <div id="main">
-        <div class="row">
-            <div class="column"> -->
-    <!--Image with floating text -->
-    <!--
-                <img class="imagebutton" src="Soccerbackground.jpeg" alt="SoccerBack">
-                <h><a href="soccer.html"><button class="allbuttons">Soccer</button></a></h>
-            </div>
-            <div class="column">
-                <img class="imagebutton" src="football.jpeg" alt="">
-                <h><button class="allbuttons">Football</button></h>
-            </div>
-            <div class="column">
-                <img class="imagebutton" src="badminton.jpeg" alt="">
-                <h><button class="allbuttons">Badminton</button></h>
-            </div>
-            <div class="column">
-                <img class="imagebutton" src="hockey.jpeg" alt="">
-                <h><button class="allbuttons">Hockey</button></h>
-            </div>
-        </div>
-    </div> 
--->
-
 
     <!-- Footer starts here.-->
     <footer>
@@ -176,9 +118,14 @@
                         class="fa-brands fa-square-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/rezaul-islam-23118b255/" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
+                <a class="link" href="https://getbootstrap.com/docs/5.0/components/navbar/"
+                    target="_blank">Bootstrap</a>
+                <a class="link" href="https://www.youtube.com/" target="_blank">YouTube</a>
             </div>
         </center>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
